# ai-comment-moderator

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  config.py  dependencies.py  main.py
app/api/: routes.py
app/core/: errors.py  rate_limit.py
app/models/: schemas.py
app/services/: moderator.py  notifier.py  prompts.py  store.py
tests/: conftest.py  test_appeal.py  test_dependencies.py  test_health.py  test_log.py  test_main.py  test_moderate.py  test_moderator.py  test_notifier.py  test_rate_limit.py  test_store.py  test_validation.py
