[project]
name = "ai-comment-moderator"
version = "1.0.0"
description = "Backend API that moderates forum comments with an LLM, including an appeal mechanism."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, bugbear, comprehensions
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = [
    "E501",  # line length: prose strings/prompts can exceed
    "B008",  # Depends() in argument defaults is the idiomatic FastAPI pattern
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100
